--- a/recipes.html
+++ b/recipes.html
@@ -22,7 +22,7 @@
         <div class="wrapper">
             <div class="logo">
                 <a href="../HTML/index.html">
-                    <img src="../Images,Icons,Videos/IconHaukaiResturant.jpg" alt="The Haukai restaurant icon Logo" height="100" width="240">
+                    <img src="../HTML/Images,Icons,Videos/IconHaukaiResturant.jpg" alt="The Haukai restaurant icon Logo" height="100" width="240">
                 </a>
             </div>
             <nav>      <!--Navigation bar in the banner-->
@@ -45,7 +45,7 @@
     </div>
     <p class="centered-content">1 Island Street, Kerikeri, Bay of Islands | 09 401 4019</p>
 
-    <div class="container centered-content">
+    <div class="centered-content">
         <h2>Check out our favorite recipes</h2>
         <ul class="recipe-list">
             <li><a href="https://publicdomainrecipes.com/baked-salmon/" target="_blank">Baked Salmon</a></li>
@@ -64,16 +64,16 @@
 
     <div class="pagefooter">
         <a href="https://www.facebook.com/">
-            <img src="../Images,Icons,Videos/Facebook-icon.png" alt="Facebook">
+            <img src="../HTML/Images,Icons,Videos/Facebook-icon.png" alt="Facebook">
         </a>
         <a href="https://www.instagram.com/">
-            <img src="../Images,Icons,Videos/Instagram-icon.png" alt="Instagram">
+            <img src="../HTML/Images,Icons,Videos/Instagram-icon.png" alt="Instagram">
         </a>
         <a href="https://www.youtube.com/">
-            <img src="../Images,Icons,Videos/youtube-icon.png" alt="YouTube">
+            <img src="../HTML/Images,Icons,Videos/youtube-icon.png" alt="YouTube">
         </a>
         <a href="https://x.com/?lang=en-nz">
-            <img src="../Images,Icons,Videos/twitter-icon.png" alt="Twitter">
+            <img src="../HTML/Images,Icons,Videos/twitter-icon.png" alt="Twitter">
         </a><br>
         <a href="../HTML/hours.html">Store Hours</a>
         <a href="../HTML/contact.html">Contact Us</a>
