--- a/reservations.html
+++ b/reservations.html
@@ -22,7 +22,7 @@
         <div class="wrapper">   <!--Setting a class for a sticky banner-->
             <div class="logo">  <!--Logo info-->
                 <a href="../HTML/index.html">
-                    <img src="../Images,Icons,Videos/IconHaukaiResturant.jpg" alt="The Haukai restaurant icon Logo" height="100" width="240">
+                    <img src="../HTML/Images,Icons,Videos/IconHaukaiResturant.jpg" alt="The Haukai restaurant icon Logo" height="100" width="240">
                 </a>
             </div>
             <nav>      <!--Navigation bar in the banner-->
@@ -83,16 +83,16 @@
     <!--div for pagefooter-->
     <div class="pagefooter">
         <a href="https://www.facebook.com/">
-            <img src="../Images,Icons,Videos/Facebook-icon.png" alt="Facebook">
+            <img src="../HTML/Images,Icons,Videos/Facebook-icon.png" alt="Facebook">
         </a>
         <a href="https://www.instagram.com/">
-            <img src="../Images,Icons,Videos/Instagram-icon.png" alt="Instagram">
+            <img src="../HTML/Images,Icons,Videos/Instagram-icon.png" alt="Instagram">
         </a>
         <a href="https://www.youtube.com/">
-            <img src="../Images,Icons,Videos/youtube-icon.png" alt="YouTube">
+            <img src="../HTML/Images,Icons,Videos/youtube-icon.png" alt="YouTube">
         </a>
         <a href="https://x.com/?lang=en-nz">
-            <img src="../Images,Icons,Videos/twitter-icon.png" alt="Twitter">
+            <img src="../HTML/Images,Icons,Videos/twitter-icon.png" alt="Twitter">
         </a>
         <br>
         <a href="../HTML/hours.html">Store Hours</a>
