--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         <div class="wrapper">
             <div class="logo">
                 <a href="../HTML/index.html">
-                    <img src="../Images,Icons,Videos/IconHaukaiResturant.jpg" alt="The Haukai restaurant icon Logo" height="100" width="240">
+                    <img src="../HTML/Images,Icons,Videos/IconHaukaiResturant.jpg" alt="The Haukai restaurant icon Logo" height="100" width="240">
                 </a>
             </div>
             <nav>
@@ -87,16 +87,16 @@
     <!-- Page Footer -->
     <div class="pagefooter">
         <a href="https://www.facebook.com/">
-            <img src="../Images,Icons,Videos/Facebook-icon.png" alt="Facebook Icon">
+            <img src="../HTML/Images,Icons,Videos/Facebook-icon.png" alt="Facebook Icon">
         </a>
         <a href="https://www.instagram.com/">
-            <img src="../Images,Icons,Videos/Instagram-icon.png" alt="Instagram Icon">
+            <img src="../HTML/Images,Icons,Videos/Instagram-icon.png" alt="Instagram Icon">
         </a>
         <a href="https://www.youtube.com/">
-            <img src="../Images,Icons,Videos/youtube-icon.png" alt="YouTube Icon">
+            <img src="../HTML/Images,Icons,Videos/youtube-icon.png" alt="YouTube Icon">
         </a>
         <a href="https://x.com/?lang=en-nz">
-            <img src="../Images,Icons,Videos/twitter-icon.png" alt="Twitter Icon">
+            <img src="../HTML/Images,Icons,Videos/twitter-icon.png" alt="Twitter Icon">
         </a>
         <br>
         <a href="../HTML/hours.html">Store Hours</a>
